<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hidden App"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/IdL2">
                    <GridView
                        android:numColumns="4"
                        android:scrollbarSize="10dp"
                        android:id="@+id/IdGridviewCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        ></GridView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/relLayout1"
                    android:padding="20dp"
                    android:layout_below="@id/IdL2">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/prompt_email"
                        android:layout_centerHorizontal="true"/>



                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:layout_below="@+id/input_email"/>

                    <EditText
                        android:id="@+id/input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:layout_below="@+id/input_password"/>



                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relLayout1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Group :"
                        android:textSize="20dp"
                        android:id="@+id/idtgroup"/>
                    <ImageView
                        android:id="@+id/IdAddGroupAdmn"
                        android:layout_toRightOf="@id/idtgroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_rename_form"
                        ></ImageView>

                  <LinearLayout
                      android:id="@+id/IdLineairGroup"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_below="@id/IdAddGroupAdmn"
                      android:layout_marginTop="40dp"
                      android:layout_marginBottom="40dp"

                      >

                  </LinearLayout>
                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:layout_below="@+id/IdLineairGroup"
                        android:text="@string/register"
                        android:textColor="#FFF"
                        android:background="@drawable/theme_button"
                        />

                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        />



</RelativeLayout>